Simplifies a bit. Removes deps on lodash, underscore.string

--- a/generators/app/templates/public/index.html
+++ b/generators/app/templates/public/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="<%= description %>">
     <meta name="author" content="<%= author %>">
     <link href="/css/style.css" rel="stylesheet">
-    <title><%= name %></title>
+    <title><%= title %></title>
 </head>
 <body class="container">
     <ng-view></ng-view>
